--- a/chatwindow.ui
+++ b/chatwindow.ui
@@ -20,108 +20,69 @@
       <item>
        <widget class="QTabWidget" name="tabWidget">
         <property name="currentIndex">
-         <number>2</number>
+         <number>0</number>
         </property>
         <widget class="QWidget" name="tab_1">
          <attribute name="title">
           <string>Tab 1</string>
          </attribute>
-         <widget class="QTextEdit" name="chatDisplay">
-          <property name="geometry">
-           <rect>
-            <x>10</x>
-            <y>10</y>
-            <width>551</width>
-            <height>241</height>
-           </rect>
-          </property>
-          <property name="readOnly">
-           <bool>true</bool>
-          </property>
-         </widget>
-         <widget class="QSlider" name="packetSize">
-          <property name="geometry">
-           <rect>
-            <x>10</x>
-            <y>260</y>
-            <width>381</width>
-            <height>27</height>
-           </rect>
-          </property>
-          <property name="minimum">
-           <number>128</number>
-          </property>
-          <property name="maximum">
-           <number>2048</number>
-          </property>
-          <property name="singleStep">
-           <number>64</number>
-          </property>
-          <property name="pageStep">
-           <number>128</number>
-          </property>
-          <property name="value">
-           <number>512</number>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="tickPosition">
-           <enum>QSlider::TicksBelow</enum>
-          </property>
-          <property name="tickInterval">
-           <number>128</number>
-          </property>
-         </widget>
-         <widget class="QLabel" name="packetSizeLabel">
-          <property name="geometry">
-           <rect>
-            <x>410</x>
-            <y>270</y>
-            <width>311</width>
-            <height>20</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>Max Packet Size: 512 bytes</string>
-          </property>
-         </widget>
-         <widget class="QTextEdit" name="messageInput">
-          <property name="geometry">
-           <rect>
-            <x>10</x>
-            <y>299</y>
-            <width>561</width>
-            <height>111</height>
-           </rect>
-          </property>
-         </widget>
-         <widget class="QPushButton" name="sendButton">
-          <property name="geometry">
-           <rect>
-            <x>0</x>
-            <y>420</y>
-            <width>321</width>
-            <height>31</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>Отправить сообщение</string>
-          </property>
-         </widget>
-         <widget class="QPushButton" name="sendFileButton">
-          <property name="geometry">
-           <rect>
-            <x>330</x>
-            <y>420</y>
-            <width>231</width>
-            <height>31</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>Отправить файл</string>
-          </property>
-         </widget>
+         <layout class="QVBoxLayout">
+          <item>
+           <widget class="QListView" name="listView"/>
+          </item>
+          <item>
+           <widget class="QSlider" name="packetSize">
+            <property name="minimum">
+             <number>128</number>
+            </property>
+            <property name="maximum">
+             <number>2048</number>
+            </property>
+            <property name="singleStep">
+             <number>64</number>
+            </property>
+            <property name="pageStep">
+             <number>128</number>
+            </property>
+            <property name="value">
+             <number>512</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="tickPosition">
+             <enum>QSlider::TicksBelow</enum>
+            </property>
+            <property name="tickInterval">
+             <number>128</number>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="packetSizeLabel">
+            <property name="text">
+             <string>Max Packet Size: 512 bytes</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QTextEdit" name="messageInput"/>
+          </item>
+          <item>
+           <widget class="QPushButton" name="sendButton">
+            <property name="text">
+             <string>Отправить сообщение</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="sendFileButton">
+            <property name="text">
+             <string>Отправить файл</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </widget>
         <widget class="QWidget" name="tab_2">
          <attribute name="title">
